# driftwatch

./: .env.example  .gitignore  Dockerfile  Dockerfile.litserve  LICENSE  README.md  TODO.md  pyproject.toml  requirements.litserve.txt  requirements.txt
app/: config.py  forwarding.py  main.py  middleware.py  pipeline.py  proxy.py  utils.py
app/providers/: anthropic.py  base.py  openai.py  registry.py
app/schemas/: anthropic.py  cli.py  internal.py  notifications.py  openai.py
cli/: __main__.py
db/: locks.py  models.py  session.py  vector_store.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py  0002_clusters.py  0003_birch_clusters.py  0004_request_response_embeddings.py  0005_cluster_centroid_index.py  0006_needs_clustering.py  0007_kmeans_split_fn.py  0008_needs_evaluation.py  0009_cluster_updated_at_trigger.py
db/repositories/: __init__.py  base.py  cluster_base.py  cluster_postgres.py  cluster_repo.py  pgvector_repo.py  qdrant_repo.py  response_repo.py
docker/: docker-compose.monitoring.yml  docker-compose.yml  prometheus.yml
monitoring/: logging.py  metrics.py
services/: circuit_breaker.py
services/clustering/: birch.py  service.py
services/embedding/: client.py  server.py  similarity.py
services/notifications/: base.py
services/notifications/repositories/: telegram.py  webhook.py
tests/: conftest.py
tests/integration/: test_proxy.py
tests/unit/: test_birch.py  test_log_and_enqueue.py  test_providers.py
workers/: celery_app.py  detection.py  evaluator.py
