[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "driftwatch"
version = "0.1.0"
description = "Self-hosted transparent proxy for OpenAI API with semantic drift detection"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",

    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pgvector>=0.2",

    # Task queue
    "celery>=5.3",
    "redis>=5.0",

    # ML
    "sentence-transformers>=2.7",
    "torch>=2.2",
    "numpy>=1.26",

    # Config & validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",

    # Observability
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
qdrant = [
    "qdrant-client>=1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "workers*", "db*", "services*", "monitoring*", "cli*"]
